media/immich-gallery/deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-gallery
spec:
  revisionHistoryLimit: 3
  replicas: 1
  selector:
    matchLabels:
      name: immich-gallery
  template:
    metadata:
      labels:
        name: immich-gallery
    spec:
      securityContext:
        fsGroup: 1200
      containers:
        - name: immich-gallery-server
          image: immich-server

          ports:
            - name: http
              containerPort: 2283
              protocol: TCP
          
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /api/server/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1

          volumeMounts:
            - name: galleries
              mountPath: /mnt/galleries
            - name: library
              mountPath: /usr/src/app/upload

      volumes:
        - name: galleries
          nfs:
            server: vega.<path:core:paths#domain_lan>
            path: <path:core:paths#nas_storage>/immich/galleries
            readOnly: true
        - name: library
          persistentVolumeClaim:
            claimName: pvc-immich-gallery
