media/immich-gallery/deployment/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich-gallery-ingress
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`indium.<path:core:paths#domain>`)
      kind: Rule
      middlewares:
        - name: immich-gallery-redirect
      services:
        - name: immich-gallery
          port: 2283
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immich-gallery-redirect
spec:
  redirectRegex:
    regex: ^https://indium.<path:core:paths#domain>/?$
    replacement: https://indium.<path:core:paths#domain>/search?query=%7B"isFavorite"%3Atrue%7D
